--- a/Resources/views/swagger/parameter/parameter_array.html.twig
+++ b/Resources/views/swagger/parameter/parameter_array.html.twig
@@ -16,6 +16,12 @@
     </span>
 {% endif %}
 <br />
+
+{% if parameter.defaultValue is not null %}
+    <small>Default value:</small><span class="badge badge-light">Yes</span>
+    <br />
+{% endif %}
+
 {% if parameter.description %}
     <span class="small font-italic ml-4">{{ parameter.description|raw }}</span>
     <br />
